--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -630,8 +630,8 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 35px;
   border-radius: 50%;
   border: 1px solid color-mix(in srgb, var(--default-color), transparent 50%);
   font-size: 16px;
@@ -745,6 +745,9 @@ h6 {
   margin-bottom: 0;
 }
 
+.footer .copyright p .sitename{ 
+  color: var(--accent-color); 
+}
 .footer .credits {
   margin-top: 6px;
   font-size: 13px;
