--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,6 +299,7 @@ h6 {
   padding: 10px 0;
   transition: 0.3s;
   border-bottom: 1px solid var(--background-color);
+  align-items: center;
 }
 
 .header .logo {
@@ -355,7 +356,93 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /* Navmenu - Desktop */
+
+/* burger-menu */
+    .menu-burger-wrapper {
+    position: relative;
+    z-index: 7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 24px;
+    height: 18px;
+    margin-right: 15px;
+  }
+  .menu-burger {
+    position: relative;
+    height: 2px;
+    width: 24px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
+  .menu-burger::before {
+    position: absolute;
+    content: "";
+    top: -6px;
+    left: 0;
+    height: 2px;
+    width: 24px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    transition:
+      transform 0.15s ease-in,
+      top 0.15s ease-in 0.15s;
+  }
+  .menu-burger::after {
+    position: absolute;
+    content: "";
+    top: 6px;
+    left: 0;
+    height: 2px;
+    width: 24px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    transition:
+      transform 0.15s ease-in,
+      top 0.15s ease-in 0.15s;
+  }
+  .menu-burger.active {
+    background: transparent;
+  }
+  .menu-burger.active::before {
+    transform: rotate(45deg);
+    top: 0;
+    transition:
+      top 0.15s linear,
+      transform 0.15s ease-in 0.15s;
+  }
+  .menu-burger.active::after {
+    transform: rotate(-45deg);
+    top: 0;
+    transition:
+      top 0.15s linear,
+      transform 0.15s ease-in 0.15s;
+  }
+
+@media (min-width: 450px) { 
+  /* burger-menu */
+    .menu-burger-wrapper {
+      height: 22px;
+      width: 30px;
+    }
+    .menu-burger {
+      width: 30px;
+    }
+    .menu-burger::before {
+      width: 30px;
+      top: -8px;
+    }
+    .menu-burger::after {
+      width: 30px;
+      top: 8px;
+    }
+}
+
 @media (min-width: 1200px) {
+  .menu-burger-wrapper{
+    display: none;
+  }
   .navmenu {
     padding: 0;
   }
@@ -473,22 +560,32 @@ h6 {
 
   .navmenu {
     padding: 0;
-    z-index: 9997;
+    z-index: 2;
   }
 
   .navmenu ul {
-    display: none;
+    /* display: none; */
+    display: block;
     list-style: none;
     position: absolute;
-    inset: 60px 20px 20px 20px;
+    left: -250px;
     padding: 10px 0;
     margin: 0;
-    border-radius: 6px;
+    /* border-radius: 6px; */
+    border-bottom-right-radius: 6px;
+    border-top-right-radius: 6px;
     background-color: var(--nav-mobile-background-color);
     border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
+    width: 250px;
+    height: 100%;
+    transition: left 0.3s ease-in;
+  }
+
+  .navmenu ul.active{
+    left: 0px;
   }
 
   .navmenu a,
@@ -505,7 +602,7 @@ h6 {
     transition: 0.3s;
   }
 
-  .navmenu a i,
+  /* .navmenu a i,
   .navmenu a:focus i {
     font-size: 12px;
     line-height: 0;
@@ -518,7 +615,7 @@ h6 {
     border-radius: 50%;
     transition: 0.3s;
     background-color: color-mix(in srgb, var(--accent-color), transparent 90%);
-  }
+  } */
 
   .navmenu a i:hover,
   .navmenu a:focus i:hover {
@@ -564,7 +661,8 @@ h6 {
     overflow: hidden;
   }
 
-  .mobile-nav-active .mobile-nav-toggle {
+  /* .mobile-nav-active  */
+  .mobile-nav-toggle {
     color: #fff;
     position: absolute;
     font-size: 32px;
@@ -574,12 +672,20 @@ h6 {
     z-index: 9999;
   }
 
-  .mobile-nav-active .navmenu {
+/* .mobile-nav-active  */
+  .navmenu {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
     position: fixed;
+    width: 0%;
     overflow: hidden;
     inset: 0;
     background: rgba(33, 37, 41, 0.8);
-    transition: 0.3s;
+    transition: width 0.3s ease-in;
+  }
+   .navmenu.active {
+    width: 100%;
   }
 
   .mobile-nav-active .navmenu>ul {
@@ -1010,6 +1116,18 @@ section,
 .hero .cta-btn:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
 }
+.flex-direction {
+  flex-direction: column;
+  row-gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 450px) { 
+  .flex-direction {
+    flex-direction: row;
+     row-gap: 0px;
+  }
+}
 
 @media (max-width: 480px) {
   .hero .cta-btn {
@@ -1399,7 +1517,6 @@ section,
   }
 
   .specials .nav-link.active {
-    color: var(--accent-color);
     background: var(--accent-color);
   }
 }
