--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,38 +93,9 @@ input[type="time"] {
   box-sizing: border-box;
 }
 
-input {
+/* input {
   all: unset; 
-}
-
-input[type="checkbox"] {
-  appearance: none;
-  width: 16px;
-  height: 16px;
-  border: 1px solid #999;
-  border-radius: 4px;
-  position: relative;
-  cursor: pointer;
-  display: inline-block;
-  vertical-align: middle;
-  transition: all 0.2s ease;
-  margin: 0;
-}
-
-input[type="checkbox"]:checked {
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
-}
-
-input[type="checkbox"]:checked::after {
-  content: '✔';
-  color: #fff;
-  font-size: 12px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -55%);
-}
+} */
 
 
 /* PHP Email Form Messages
@@ -327,7 +298,7 @@ input[type="checkbox"]:checked::after {
   align-items: center;
   column-gap: 20px;
 }
-.account {
+.account, .cart {
   border: none;
   background-color: transparent;
   padding: 0;
@@ -336,6 +307,7 @@ input[type="checkbox"]:checked::after {
    width: 24px;
   height: 20px;
 }
+
 .cart > svg {
   width: 24px;
   height: 18px;
@@ -2030,6 +2002,105 @@ section,
 # Starter Section Section
 --------------------------------------------------------------*/
 
+/* Food List */
+
+.wrapper-food {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 10px;
+}
+.wrapper-img-add {
+  flex-basis: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 15px;
+}
+.food-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  float: left;
+  border: 8px solid
+  color-mix(in srgb, var(--default-color), transparent 90%);
+  border-radius: 50%;
+}
+
+.wrapper-discription-food {
+  flex-basis: 80%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+}
+
+.food-card {
+  
+}
+.food-detail-link {
+  color: var(--heading-color);
+  padding-right: 10px;
+  position: relative;
+  z-index: 3;
+  font-weight: 700;
+  transition: 0.3s;
+}
+.food-price {
+  color: var(--accent-color);
+  position: relative;
+  z-index: 3;
+  padding: 0 10px;
+  font-weight: 600;
+  font-family: sans-serif;
+}
+.food-ingredients {
+  font-style: italic;
+  font-size: 14px;
+  font-family: var(--nav-font);
+  color: 
+  color-mix(in srgb, var(--default-color), transparent 50%);
+}
+.food-add-cart {
+  margin-top: auto;
+ 
+  border: none;
+  background-color: var(--accent-color);
+  color:  color-mix(in srgb, var(--background-color) 90%, white 5%);
+  font-weight: 600;
+}
+
+
+
+
+/* Modal */
+input[type="checkbox"] {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #999;
+  border-radius: 4px;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  transition: all 0.2s ease;
+  margin: 0;
+}
+
+input[type="checkbox"]:checked {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+input[type="checkbox"]:checked::after {
+  content: '✔';
+  color: #fff;
+  font-size: 12px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -55%);
+}
+
 .auth-modal-container,
 .reg-modal-container {
   position: fixed;
@@ -2042,7 +2113,11 @@ section,
 }
  
 .auth-modal,
-.reg-modal {
+.reg-modal,
+.cart-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: absolute;
   z-index: 5;
   top: 50%;
@@ -2061,6 +2136,13 @@ section,
 .auth-modal-close {
   display: block;
   margin-left: auto;
+  width: 24px;
+  height: 24px;
+}
+.reg-modal-back {
+  margin-top: auto;
+  width: 24px;
+  height: 24px;
 }
 
 .menu-burger-container  .menu-burger,
@@ -2076,14 +2158,15 @@ section,
   top: -4px;
 }
 .reg-modal {
-  height: 545px;
+  height: 560px;
 }
 .auth-modal-container.active,
 .reg-modal-container.active {
    right: 0%;
 }
 .auth-modal-title,
-.reg-modal-title{
+.reg-modal-title,
+.cart-modal-title{
   text-align: center;
   margin: 0 auto 30px auto;
 }
@@ -2096,6 +2179,7 @@ section,
 }
 .auth-modal-form > input,
 .reg-modal-form > input{
+  all: unset; 
   background-color: #0c0b09;
   border: 1px solid var(--accent-color);
   border-radius: 5px;
@@ -2127,6 +2211,78 @@ section,
   all: revert;
   flex-shrink: 0;
 }
+
+/* Cart modal */
+.cart-modal {
+  height: auto;
+}
+.cart-modal-container {
+  position: fixed;
+  z-index: 5;
+  top: -100%;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transition: top 0.3s ease-in;
+}
+.cart-modal-container.active{
+  top: 0;
+}
+
+.cart-modal-row {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.cart-modal-card {
+  padding: 15px;
+  border: 1px solid var(--default-color);
+  border-radius: 10px;
+}
+.cart-modal-description-card {
+  display: flex;
+  column-gap: 5px;
+}
+.cart-img-add,
+.cart-discription-food {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.cart-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.cart-modal-btn {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  column-gap: 10px
+}
+.cart-modal-plus,
+.cart-modal-minus {
+  width: 25px;
+  height: 25px;
+  border: none;
+  background-color: var(--accent-color);
+  font-weight: 700;
+}
+
+.cart-modal-count {
+  all: unset;
+  width: 80px;
+  height: 25px;
+  background-color: var(--default-color);
+}
+.cart-modal-delete {
+  margin-left: auto;
+  background-color: var(--default-color);
+  border: none;
+}
+
 
 
 @media (min-width: 360px) { 
@@ -2176,6 +2332,11 @@ section,
       height: 400px;
     
     }
+    .auth-modal-close,
+    .reg-modal-back {
+      width: 28px;
+      height: 28px;
+    }
     .reg-modal {
       height: 605px;
     }
@@ -2205,18 +2366,19 @@ section,
     /* Modal window */
     .auth-modal,
     .reg-modal {
-      width: calc(100% - 100px); /* 100% ширины минус по 10px с каждой стороны */
+      width: calc(100% - 100px); 
       height: 420px;
     }
     .reg-modal {
       height: 650px;
     }
-    .auth-modal-form > input, .reg-modal-form > input { 
+    .auth-modal-form > input, 
+    .reg-modal-form > input,
+    .auth-modal-in, 
+    .reg-modal-in { 
       padding: 10px 15px;
     }
-    .auth-modal-in, .reg-modal-in {
-      padding: 10px 15px;
-    }
+    
 }
 
 @media (min-width: 768px) { 
@@ -2227,7 +2389,14 @@ section,
     /* Modal window */
     .auth-modal,
     .reg-modal {
-      width: calc(100% - 150px); /* 100% ширины минус по 10px с каждой стороны */
+      width: calc(100% - 150px); 
+    }
+    .reg-modal-label {
+      font-size: 12px;
+    }
+    input[type="checkbox"] {
+      width: 18px;
+      height: 18px
     }
 }
 
@@ -2239,7 +2408,40 @@ section,
     /* Modal window */
     .auth-modal,
     .reg-modal {
-      width: calc(100% - 200px); /* 100% ширины минус по 10px с каждой стороны */
+      width: calc(100% - 200px);
+      height: 620px;
+    }
+     .reg-modal {
+      height: 970px;
+    }
+    .auth-modal-close,
+    .reg-modal-back {
+      width: 34px;
+      height: 34px;
+    }
+    .auth-modal-title, .reg-modal-title {
+      font-size: 28px;
+    }
+    .auth-modal-form, .reg-modal-form { 
+      row-gap: 40px;
+      padding: 60px;
+    }
+    .auth-modal-form > input, 
+    .reg-modal-form > input,
+    .auth-modal-in, 
+    .reg-modal-in {
+      padding: 15px 20px;
+      font-size: 18px;
+    }
+    .auth-modal-reg{
+      font-size: 18px;
+    }
+    .reg-modal-label {
+      font-size: 14px;
+    }
+    input[type="checkbox"] {
+      width: 20px;
+      height: 20px
     }
 }
 @media (min-width: 1200px) { 
@@ -2250,7 +2452,14 @@ section,
     /* Modal window */
     .auth-modal,
     .reg-modal {
-      width: calc(100% - 250px); /* 100% ширины минус по 10px с каждой стороны */
+      width: calc(100% - 250px);
+    }
+    .reg-modal-label {
+      font-size: 16px;
+    }
+    input[type="checkbox"] {
+      width: 24px;
+      height: 24px
     }
 }
 
@@ -2270,5 +2479,8 @@ section,
     .auth-modal,
     .reg-modal {
       width: calc(100% - 300px); /* 100% ширины минус по 10px с каждой стороны */
+    }
+    .auth-modal-title, .reg-modal-title {
+        font-size: 32px;
     }
 }
