--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2173,6 +2173,33 @@ input[type="radio"]:checked::after {
   transform: translate(-50%, -50%) scale(1);
 }
 
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="time"]::-webkit-calendar-picker-indicator  {
+  background: transparent;
+  color: transparent;
+  cursor: pointer;
+}
+
+input[type="date"] {
+  background: url('../img/svg/calendar.svg') no-repeat right 10px center;
+  background-size: 20px 20px;
+ 
+}
+input[type="time"] {
+  background: url('../img/svg/clock.svg') no-repeat right 10px center;
+  background-size: 20px 20px;
+ 
+}
+#table,
+#table-modal {
+  background: url('../img/svg/persons.svg') no-repeat right 10px center;
+  background-size: 20px 20px;
+ 
+}
+#table::placeholder {
+  color: var(--default-color);
+}
+
 .auth-modal-container,
 .reg-modal-container {
   position: fixed;
