--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2104,6 +2104,33 @@ section,
 }
 
 
+/* Table */
+.input-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.input-wrapper input {
+  width: 100%;
+  padding-right: 40px;
+}
+
+.fake-placeholder {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #aaa;
+  pointer-events: none;
+  font-size: 14px;
+}
+
+.input-wrapper input:focus + .fake-placeholder,
+.input-wrapper input:not(:placeholder-shown) + .fake-placeholder {
+  display: none;
+}
+
+
 
 
 /* Modal */
