--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2104,35 +2104,6 @@ section,
 }
 
 
-/* Table */
-.input-wrapper {
-  position: relative;
-  display: inline-block;
-}
-
-.input-wrapper input {
-  width: 100%;
-  padding-right: 40px;
-}
-
-.fake-placeholder {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #aaa;
-  pointer-events: none;
-  font-size: 14px;
-}
-
-.input-wrapper input:focus + .fake-placeholder,
-.input-wrapper input:not(:placeholder-shown) + .fake-placeholder {
-  display: none;
-}
-
-
-
-
 /* Modal */
 input[type="checkbox"] {
   appearance: none;
@@ -2221,7 +2192,10 @@ input[type="time"] {
 #table-modal {
   background: url('../img/svg/persons.svg') no-repeat right 10px center;
   background-size: 20px 20px;
- 
+}
+#date,
+#time {
+  background-color: #fff;
 }
 #table::placeholder {
   color: var(--default-color);
