--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2171,19 +2171,14 @@ input[type="radio"]:checked::after {
   transform: translate(-50%, -50%) scale(1);
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator,
-input[type="time"]::-webkit-calendar-picker-indicator  {
-  background: transparent;
-  color: transparent;
-  cursor: pointer;
-}
 
-input[type="date"] {
+/* Table */
+#date {
   background: url('../img/svg/calendar.svg') no-repeat right 10px center;
   background-size: 20px 20px;
  
 }
-input[type="time"] {
+#time {
   background: url('../img/svg/clock.svg') no-repeat right 10px center;
   background-size: 20px 20px;
  
@@ -2193,9 +2188,13 @@ input[type="time"] {
   background: url('../img/svg/persons.svg') no-repeat right 10px center;
   background-size: 20px 20px;
 }
-#table::placeholder {
+#table::placeholder,
+#date::placeholder,
+#time::placeholder{
   color: var(--default-color);
 }
+
+
 
 .auth-modal-container,
 .reg-modal-container {
