--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2208,6 +2208,8 @@ input[type="radio"]:checked::after {
   width: 100%;
   height: 100%;
   transition: right 0.3s ease-in;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
  
 .auth-modal,
